# sopel-imdb

./: .coveralls.yml  .gitignore  .travis.yml  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml  python-tests.yml
sopel_imdb/: imdb.py
sopel_modules/imdb/: __init__.py  imdb.py
tests/: requirements.txt  test_imdb.py
