[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
platforms = ["Linux x86, x86-64"]

[tool.setuptools.packages.find]
include = ["sopel_imdb", "sopel_imdb.*"]
namespaces = false

[project]
name = "sopel-imdb"
version = "1.3.0.dev0"
description = "A working re-implementation of the imdb module for Sopel"
keywords = [
  "sopel",
  "plugin",
  "imdb",
  "cinema",
  "movie",
  "bot",
  "irc",
]
maintainers = [
  { name="Rusty Bower" },
]
authors = [
  { name="Rusty Bower" },
]

readme = "README.md"
license = { text="MIT License" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: Eiffel Forum License (EFL)",
    "License :: OSI Approved :: Eiffel Forum License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat :: Internet Relay Chat",
]
requires-python = ">=3.8, <4"
dependencies = [
    "requests",
    "sopel>=8",
]

[project.urls]
"Homepage" = "http://github.com/rustybower/sopel-imdb"
"Bug Tracker" = "http://github.com/rustybower/sopel-imdb/issues"

[project.entry-points."sopel.plugins"]
imdb = "sopel_imdb.imdb"
